Fix extra window gap issue with hidden labels

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -107,3 +107,7 @@
 .p-modal__footer {
   text-align: left;
 }
+
+.u-off-screen:not(:focus):not(:active) {
+  top: 0;
+}
